# shoe-router

./: .gitignore  .gitmodules  docker-compose.yml  generate-new-cert.sh  mock_server.sh
certbot_wrapper/: Dockerfile  run.sh
egg/: Dockerfile
george-proxy/: Dockerfile  main.py
george-status/: analysis.py  api.py  george_status.py  main.py  query.py  requirements.txt
illegalketaminestore-backend/: api.py
jsless-server/: Dockerfile  data.pkl  server.py
jsless-server/static/: main.html
morse-server/: .gitignore  Dockerfile  data.py  fake_client.sh  flake.nix  log.py  requirements.txt  server.py
morse-trainer/: edit-distance.js  history.js  index.html  morse-trainer.css  morse-trainer.js  rx.js
morse-trainer/data/: markov.json  markov.py  quotes.json  quotes.txt
nginx-routing/: Dockerfile  entry.sh  nginx.conf
nginx-routing/gogle/: index.html
nginx-routing/illegalketaminestore/: index.html
nginx-routing/static/: default.css  index.html
nginx-routing/templates/: index.html
nojs-game/: http_parse.py  server.py
nojs-interaction/: Dockerfile  server.py
nojs-interaction/static/: main.html
router/: Dockerfile
router/coral-shoes/: Cargo.toml  flake.nix
router/coral-shoes/site/: config.toml  index.html  photos-SUPER-SECRET.html  photos.html
router/coral-shoes/site/blog/: brainfuck-quine.html  softdouble.html
router/coral-shoes/site/resources/: blog.css  main.css  photos.css  softdouble.c
router/coral-shoes/src/: main.rs
router/nginx/: nginx.conf
splash/: Dockerfile  api.py  frees.txt  generate.py  requirements.txt
(+34 files in other folders)
